# CV

./: .gitignore  CV-Uni.docx  CV.tex  README.md  cv.typ  data.yaml  helper.py  justfile  main.tex  publications.bib  pyproject.toml  resume.typ  send_email.py
.github/workflows/: build-and-send.yml
work/: CV.tex  publications.bib
