[project]
name = "cv"
version = "1.0.0"
description = "Send the built PDF files to email"
authors = [{name = "Akshay Raj Gollahalli", email = "akshay@gollahalli.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "sendgrid>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
