[project]
name = "cv"
version = "1.0.0"
description = "Send the built PDF files to email"
authors = [{name = "Akshay Raj Gollahalli", email = "akshay@gollahalli.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "sendgrid>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
