[project]
name = "cv"
version = "1.0.0"
description = "Send the built PDF files to email"
authors = [{name = "Akshay Raj Gollahalli", email = "akshay@gollahalli.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.0",
    "resend>=2.30.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120
